--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     .clock {
       font-size: 5rem;
       letter-spacing: 2px;
+      broder-radius:50%;
+      width:200px;
+      height:200px;
+      border:5px solid green;
     }
     /*NB rem and viewport width are used so as to make the content as responsive as possible*/
   </style>
@@ -43,3 +47,4 @@
   </script>
 </body>
 </html>
+
